--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -108,12 +108,12 @@ Clearly, although the construction has an optimal fence complexity, in practice 
 
 Different concurrent implementation for specific data-structures are known. These implementations exploit the structure and requirements of the specific object in order to optimize the resulting implementation. For example, operations that effects different parts of the data structure can be done concurrently without interfering each other. A lot of work and effort has been put in order to develop these implementations, as well as proving their correctness, thus we would like to have a general approach to turn a given implementation to a recoverable one, while preserving its structure and complexity as much as possible. This way, we can enjoy both an efficient algorithm, as well as recoverability, while avoiding the need to design new algorithms.
 
-Ben-David, Blelloch and Wei [ref] presented a transformation for implementations which uses only read, write and CAS operation. Their transformation results a recoverable and detectable implementation. The approach for the transformation is similar to the NRL transformation using recoverable base objects [our paper ref?] - it split the code into capsules, each contains a single CAS operation followed by reads, and then replacing each CAS with its recoverable version. Each capsule can be recovered in case of a crash inside the capsule. In addition, the paper presents an optimisation for normalized algorithms, such that only two capsules are required for any operation. However, not all implementation we consider are given in a normalized form, and the process of converting an implementation into a normalized form may be costly by itself.
+Ben-David, Blelloch and Wei [ref] presented a transformation for implementations which uses only read, write and CAS operation, which results a recoverable and detectable implementation. The transformation splits the code into capsules, each contains a single CAS operation followed by reads, and then replacing each CAS with its recoverable version. Each capsule can be recovered in case of a crash inside the capsule. In addition, the paper presents an optimisation for normalized algorithms, such that only two capsules are required for any operation. However, not all implementation are given in a normalized form, and the process of converting an implementation into a normalized form may be costly by itself.
 
-Since Ben-David at el transformation is general, it may be improved in certain cases. In more details, each CAS is replaced with a recoverable CAS. This require each CAS operation to use different arguments (they implemented it using an increasing sequence number), which will be stored in the CAS location. This in turn implies that the CAS uses an unbounded word length, even if the original implementation uses a bounded CAS (for example, the operations are over a finite domain). Furthermore, altohugh two capsules are used for each normalized operation, these two capsules are executed repeatedly, in each attempt of performing the operation (the implementation is lock-free, hence a process can fail to complete its operation over and over). In many cases, we can avoid it, and not paying the extra complexity of the capsules for a failed attempt.
+Since Ben-David at el transformation is general, it may be improved in certain cases. In more details, each CAS is replaced with a recoverable CAS. This requires each CAS operation to use different arguments (they implement it using an increasing sequence number), which will be stored in the CAS location. This in turn implies that the CAS uses an unbounded word length, even if the original implementation uses a bounded CAS (for example, the operations are over a finite domain). Furthermore, altohugh two capsules are used for each normalized operation, these two capsules are executed repeatedly, in each attempt of performing the operation (the implementation is lock-free, hence a process can fail to complete its operation over and over). In many cases we can avoid it, and not paying the extra complexity of the capsules for a failed attempt.
 In addition, we would like the transformation to change as little as necessary from the original code, even in the price of having a costly recover function. Assuming crash is a rare event, this may result a more efficient implementation in practice.
 
-
+Harris' Linked-List presented in details in Section [cite]. The algorithm has the following property, which makes it persistent to crashes - each operation is linearized at its first successful CAS (not including CAS which help other operation). However, as discussed before, this does not imply that it is also detectable. The main issue is a crash right after such a CAS. Upon recovery the crashed process needs to know whether the last CAS was successful or not, in order to conclude the right response value. Moreover, two or more processes can try and perform the same operation at the same time, for example, deleting the same node. Therefore, upon recovery $p$ not only needs to know whether the node was deleted, but also to determine if it is was performed by it, or by some other process.
 
 
 
