--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -102,7 +102,7 @@ Designing a data structure which is persistent in the presence of a crash-recove
 
 Attiya et al [cite] presented a novel crash-recovery model together with a correctness condition. Roughly speaking, Nesting-safe Recoverable Linearizability (NRL) requires each recoverable operation to supply an recover function, such that invoking it after a crash inside the operation allows the process to complete the operation, as well as restore the response value if needed. Moreover, they presented recoverable implementations for read,write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read,write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation (some minor changes are still needed in order to use this transformation). In particular, this is the case for all the algorithms presented in this paper. However, this transformation is very costly, in terms of both time and space.
 
-Cohen et al [cite..] presented a universal construction that implements durably any object in a lock-free manner, using at most one persistent fence per operation, which is optimal. Moreover, the algorithm uses only read, write and CAS operations. However, universal construction by its nature is not efficient. In particular, their implementation requires to keep the entire history of the object in a designated shared queue, as well as per-process persistent log, such that these logs as whole keeps the entire history, and different logs may have a big overlap. In addition, the response of an operation is determine by looking at the entire history up to the linearization point of the operation. Their universal construction can be made detectable in the following way: upon recovery from a crash inside an $Update(op)$ operation, and after the system completes its recovery routine, $op$ was linearized if and only if $op$ appears in the shared queue (assuming all $op$s are unique). In such case, the process can conclude the response value, since the queue represents the object's history.
+Cohen et al [cite..] presented a universal construction that implements durably any object in a lock-free manner, using at most one persistent fence per operation, which is optimal. Moreover, the algorithm uses only read, write and CAS operations. However, universal construction by its nature is not efficient. In particular, their implementation requires to keep the entire history of the object in a designated shared queue, as well as per-process persistent log, such that these logs as whole keeps the entire history, and different logs may have a big overlap. In addition, the response of an operation is determine by looking at the entire history up to the linearization point of the operation. Their universal construction can be made detectable in the following way: upon recovery from a crash inside an $Update(op)$ operation, and after the system completes its recovery routine, $op$ was linearized if and only if $op$ appears in the shared queue (assuming each $op$ structure has a unique address). In such case, the process can conclude the response value, since the queue represents the object's history.
 
 Clearly, although the construction has an optimal fence complexity, in practice it is not efficient. Moreover, the crash model they consider is a system-wide crash, in which all processes crash at once. In such case, upon recovery, a single recover function is being executed by the system in order to reconstruct the queue data-structure in a consistent way. The correctness condition they consider is durable linearizability [cite], which requires that after a full system crash, the state of the object must reﬂect a consistent operation sub-history that includes all operations completed by the time of the crash. Therefore, some of the crashed operation may get lost.
 
@@ -113,13 +113,13 @@ Ben-David, Blelloch and Wei [ref] presented a transformation for implementations
 Since Ben-David at el transformation is general, it may be improved in certain cases. In more details, each CAS is replaced with a recoverable CAS. This requires each CAS operation to use different arguments (they implement it using an increasing sequence number), which will be stored in the CAS location. This in turn implies that the CAS uses an unbounded word length, even if the original implementation uses a bounded CAS (for example, the operations are over a finite domain). Furthermore, altohugh two capsules are used for each normalized operation, these two capsules are executed repeatedly, in each attempt of performing the operation (the implementation is lock-free, hence a process can fail to complete its operation over and over). In many cases we can avoid it, and not paying the extra complexity of the capsules for a failed attempt.
 In addition, we would like the transformation to change as little as necessary from the original code, even in the price of having a costly recover function. Assuming crash is a rare event, this may result a more efficient implementation in practice.
 
-Harris' Linked-List presented in details in Section [cite]. The algorithm has the following property, which makes it persistent to crashes - each operation is linearized at its first successful CAS (not including CAS which help other operation). However, as discussed before, this does not imply that it is also detectable. The main issue is a crash right after such a CAS. Upon recovery the crashed process needs to know whether the last CAS was successful or not, in order to conclude the right response value. Moreover, two or more processes can try and perform the same operation at the same time, for example, deleting the same node. Therefore, upon recovery $p$ not only needs to know whether the node was deleted, but also to determine if it is was performed by it, or by some other process.
+Harris' Linked-List presented in details in Section [cite]. The algorithm has the following property, which makes it persistent to crashes - each operation is linearized at its first successful CAS (not including CAS which help other operation). However, as discussed before, this does not imply it is also detectable. The main issue is a crash right after such a CAS. Upon recovery the crashed process needs to know whether the last CAS was successful or not, in order to conclude the right response value. Moreover, two or more processes can try and perform the same operation at the same time, for example, deleting the same node. Therefore, upon recovery $p$ not only needs to know whether the node was deleted, but also to determine if it was performed by it, or by some other process. In order to solve these issues we use the structure of the Linked-List implementation.
+
+First, we notice that, as in many algorithms, data is added to the Linked-List using nodes, and each node is unique (different nodes may have the same key, but must have different references). Therefore, if a process adds a new node $nd$ to the list using a CAS, then from this point on $nd$ is accessible as part of the list, until it is deleted. This implies a recovery function for the Insert operation, by testing the former two conditions $p$ can conclude whether its last attempt to add $nd$ was successful. For the Delete operation, we notice that once a node is logically delete (the marked bit is turned on), it remains so. Hence, if process $p$ tries to delete node $nd$ and crash, upon recovery $p$ can know if the node was logically deleted by looking at the marked bit. However, this is not enough information, as there might be many processes trying to delete $nd$ at the same time, and exactly one needs to succeed. Therefore, processes needs to reach a consensus regarding which process is the one to delete $nd$. For that, each node is equipped with an extra field named deleter which is initialised to $\bot$. This field is used by processes trying to delete the same node $nd$ in order to reach a consensus regarding which process is the one to delete $nd$. After $nd$ is logically delete, the first process which writes to deleter its id (using an atomic CAS) is the one to declare its Delete operation as successful, while all others return false. Notice that crashed operation are also trying to win the consensus, and that deleter is written to exactly once. If a crash occurs after deleter was written to, then a process can recover by reading deleter and compare it to its own id.
+
+The same technique can be used for other implementations which share some similarities with the Linked-List implementation. For example, an operation which takes effect using a single CAS, and needs to guarantee exactly one process is the one to perform it, can use a new field as the deleter in order to determine which process executed it. This requires the ability to conclude whether some process successfully performed the CAS upon recovery. In addition, the Insert operation of data-structures in which a new and unique structure is used each time a new key is added (as a node), can be recovered by looking for the new structure, or an indication for it being removed from the data-structure. Such an implementation is Michel-Scott queue for example.
 
 
 
 
 
-
-In this paper we present a new recoverable implementation for Harris' Linked-List. This implementation is efficient in terms of both time and space, and avoids few of the disadvantages the above general constructions have. In particular, our implementation does not use a recoverable CAS, but rather a primitive one. Also, the content of a CAS object is the same as the original algorithm, while in Ben-David et al implementation a recoverable CAS stores also an unbounded sequence number. Under the assumption that crash is a rare event, we have tried to make the regular operations as efficient as possible, while willing to pay with a more complex recover functions. In more details, the recovery function may access the data structure and perform operations that does not change its structure, such as search.
-
-Designing a recoverable implementation for a specific data structure, even though may result an efficient algorithm, is a non trivial and time consuming task. However, our implementation exploit a certain structure that can be found on other data structures as well, and thus our technique can be used in those cases as well. More specific, many data structures uses a CAS primitive in order to sync the operations, such that each operation is linearized at the time of a single successful CAS. In the Linked-List, for example, Insert operation is linearized at the point of adding a pointer to the new node using a successful CAS, while Delete operation is linearized at the point of a successful logical delete. The key point in recovering is that if a process crash when about to perform a CAS operation, it is not trivial to discover upon recovery whether its operation took effect. Moreover, two or more process can try and perform the same operation at the same time, for example, deleting the same node. Upon recovery, a process can not tell whether it is the process to successfully perform the operation, or that it was done by some other process, hence it does not know what value to return. Therefore, a mechanism to determine the ID of the process which performed the operation is needed, such that out of all processes attempting to perform it, exactly one is defined to successfully performed it.
